DB Connection and Migrations

--- a/sched/.gitignore
+++ b/sched/.gitignore
@@ -9,5 +9,9 @@ target/
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
+# Secrets
+.cargo
+.env
+
 # Code Editors and IDEs
 .vscode
