--- a/schedin-server/Cargo.toml
+++ b/schedin-server/Cargo.toml
@@ -22,6 +22,7 @@ sqlx = { version = "0.7", features = [
     "migrate",
     "postgres",
     "runtime-async-std",
+    "time",
     "uuid",
 ], default-features = false }
 time = { version = "0.3.29", default-features = false }
