--- a/schedin-server/Cargo.toml
+++ b/schedin-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "schedin-server"
-description = "Distributed Job Scheduling with Automatic Infrastructure Management"
+description = " Distributed Job Scheduler and Runner with Automatic Infrastructure Management and Autoscaling "
 version = "0.1.0"
 edition = "2021"
 
@@ -10,6 +10,7 @@ actix-web = { version = "4.4.0", features = [
     "rustls",
 ], default-features = false }
 base64 = { version = "0.21.4", default-features = false }
+schedin-common = { path = "../schedin-common" }
 futures = { version = "0.3.28", default-features = false }
 hex = { version = "0.4.3", default-features = false }
 jsonwebtoken = { version = "8.3.0", default-features = false }
